finalize web portal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,6 +32,12 @@
     <script src="bower_components/ngSweetAlert/SweetAlert.min.js"></script>
 
     <link href="assets/css/sweetalert/sweetalert.css" rel="stylesheet">
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js"
+    type="text/javascript" charset="utf-8"></script>
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js"
+    type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
 
 </head>
 
